envoy/single_envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    per_connection_buffer_limit_bytes: 10
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: upstream
              domains:
              - "*"
              routes:
              - name: "1234#5678#v1.2.3#/anything"
                match:
                  prefix: "/anything"
                route:
                  # regex_rewrite:
                  #   pattern:
                  #     regex: /anything/hello/(.*)
                  #   substitution: /anything/\1
                  # auto_host_rewrite: true
                  # append_x_forwarded_host: true
                  cluster: upstream-service
              - name: "1234#5678#v1.2.3#/ready"
                match:
                  prefix: "/ready"
                metadata:
                  filter_metadata:
                    cc.router:
                      fields:
                        kubeprobe:
                          bool_value: true
                direct_response:
                  status: 200
                  body:
                    inline_string: '{"message": "ready"}'
              - name: "1234#5678#v1.2.3#/health"
                match:
                  prefix: "/health"
                metadata:
                  filter_metadata:
                    cc.router:
                      kubeprobe: true
                direct_response:
                  status: 200
                  body:
                    inline_string: '{"message": "healthy"}'
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          http_protocol_options: {}

  clusters:
  - name: upstream-service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: upstream-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: upstream-service
                # address: localhost
                port_value: 8080
                # address: httpbin.org
                # port_value: 80
